fix: 🐛 address overflow

--- a/src/components/DataRoom/WorldGDP/styles.module.css
+++ b/src/components/DataRoom/WorldGDP/styles.module.css
@@ -10,7 +10,16 @@
   align-items: center;
   position: sticky;
   top: 0;
-  padding: 108px 36px 0;
+}
+
+.video {
+  width: 100%;
+  height: auto;
+  max-width: 400px;
+  max-height: 100%;
+  object-fit: contain;
+  opacity: 0.8;
+  flex-shrink: 1;
 }
 
 .contentContainer {
@@ -20,15 +29,12 @@
   align-items: center;
 }
 
-.video {
-  width: 400px;
-  opacity: 0.8;
-}
-
 .text {
   width: 240px;
   font-size: 16px;
   line-height: 24px;
+  padding-top: 108px;
+  padding-left: 36px;
   align-self: flex-start;
 }
 
@@ -59,6 +65,11 @@
     width: 300px;
   }
 
+  .text {
+    padding-top: 0px;
+    padding-left: 0px;
+  }
+
   .textContainer {
     display: block;
     margin-top: 12px;
@@ -68,5 +79,26 @@
     position: static;
     margin: 0;
     align-self: flex-start;
+  }
+}
+
+@media (max-height: 800px) {
+  .video {
+    max-width: 350px;
+  }
+  .text {
+    padding-top: 72px;
+  }
+  .textContainer {
+    margin-top: 32px;
+  }
+  .linksContainer {
+    top: 72px;
+  }
+}
+
+@media (max-height: 700px) {
+  .video {
+    max-width: 250px;
   }
 }
